Fixed horizontal scroll on mobile
- CSS rules and classes have been changed to allow for better mobile browsing.

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -2,12 +2,9 @@
     position: relative;
     min-height: 100vh;
     padding-bottom: 8.75rem;
+    overflow: hidden;
 }
 
 .bodyContainer {
     margin: 0 auto;
-}
-
-.hide__overflow__y {
-    overflow-y: hidden;
 }
